styled the header to fix contrast issue

--- a/project/website-project/styles/styles-desktop.css
+++ b/project/website-project/styles/styles-desktop.css
@@ -15,7 +15,7 @@ body {
 }
 
 header {
-    background: linear-gradient(135deg, #FFFFFF, #002D62, #CE1126);
+    background: linear-gradient(135deg, #FFFFFF, #002D62, #CE1126, #FFFFFF);
     color: #FFFFFF;
     text-align: center;
     padding: 10px 20px;
@@ -44,12 +44,17 @@ nav {
 
 .nav-list li a {
     text-decoration: none;
-    color: #FFFFFF;
+    color: #000000;
     font-weight: bold;
     font-size: 20px;
     padding: 10px, 15px;
     margin-right: 2rem;
     font-family: 'Montserrat', sans-serif;
+}
+
+.nav-list li a:hover {
+    color: #FFFFFF;
+    transform: scale(1.05);
 }
 
 .open-menu,
